RESOLVED FIXED135323
[REGRESSION][ftlopt merge][32-bit] stress/prune-multi-put-by-offset-replace-or-transition-variant.js.dfg-eager hits an assertion in SpeculativeJIT::silentSavePlanForGPR
https://bugs.webkit.org/show_bug.cgi?id=135323
Summary [REGRESSION][ftlopt merge][32-bit] stress/prune-multi-put-by-offset-replace-o...
Filip Pizlo
Reported 2014-07-26 10:02:20 PDT
Patch forthcoming.
Attachments
the patch (5.63 KB, patch)
2014-07-26 10:07 PDT, Filip Pizlo
oliver: review+
Filip Pizlo
Comment 1 2014-07-26 10:07:01 PDT
Created attachment 235574 [details] the patch
Filip Pizlo
Comment 2 2014-07-27 16:36:03 PDT
Mark Hahnenberg
Comment 3 2014-07-29 15:45:51 PDT
*** Bug 135025 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.